--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,5 @@
     "cors": "^2.8.5",
     "discord.js": "^14.19.2",
     "express": "^5.1.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
